--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+title: Amric Trudel
+description: Curriculum Vitae
+show_downloads: false
